<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Speech Cloud</string>
    <string name="save_cloud">Save</string>
    <string name="load_cloud">Load</string>
    <string name="exclusion_activity">Exclusion List</string>
    <string name="screenshot">Screenshot</string>
    <string name="settings">Settings</string>

    <string name="agreement">
            Speech Cloud was created by:\n
            Isaac Wang, Aaron Grider, Van Nguyen\n\n
            By using this app, you agree to the\n
            <a href="http://voicecloudapp.com">End User License Agreement</a>\n\n
            Copyright \u00A9 2015 Team Root
    </string>

    <string-array name="Colors">
        <item>Default</item>
        <item>Classic</item>
    </string-array>

    <integer-array name="ColorsData">
        <item>0</item>
        <item>1</item>
    </integer-array>

</resources>
